--- a/DebugBindingPanel/plugin.xml
+++ b/DebugBindingPanel/plugin.xml
@@ -1,35 +1,27 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<?eclipse version="3.4"?>
-<plugin>
 
+<plugin>
    <extension
          point="org.eclipse.ui.views">
       <category
             name="SoftwareFm - debug"
             id="org.softwareFm.debug">
       </category>
-      <view            name="S/W FM - Binding Debug"
+      <view            name="Binding Debug"
             icon="icons/sample.gif"
             category="org.softwareFm.debug"
-            class="org.softwareFm.debugPanel.views.DebugBindingView"
+            class="org.softwareFm.debugPlugin.binding.DebugBindingView"
             id="org.softwareFm.debugPanel.views.DebugBindingView">
       </view>
-      <view            name="S/W FM - Src/Jar Debug"
+      <view            name="Messages Debug"
             icon="icons/sample.gif"
             category="org.softwareFm.debug"
-            class="org.softwareFm.debugPanel.views.DebugSrcAndJarView"
-            id="org.softwareFm.debugPanel.views.DebugSrcAndJarView">
-      </view>
-      <view            name="S/W FM - Messages Debug"
-            icon="icons/sample.gif"
-            category="org.softwareFm.debug"
-            class="org.softwareFm.debugPanel.views.DebugMessageView"
+            class="org.softwareFm.debugPlugin.messages.DebugMessageView"
             id="org.softwareFm.debugPanel.views.DebugMessageView">
       </view>
-      <view            name="S/W FM - Events Debug"
+      <view            name="Events Debug"
             icon="icons/sample.gif"
             category="org.softwareFm.debug"
-            class="org.softwareFm.debugPanel.views.DebugEventView"
+            class="org.softwareFm.debugPlugin.events.DebugEventView"
             id="org.softwareFm.debugPanel.views.DebugEventView">
       </view>
    </extension>
@@ -40,11 +32,6 @@
                relative="org.eclipse.ui.views.TaskList"
                relationship="right"
                id="org.softwareFm.debugPanel.views.DebugBindingView">
-         </view>
-         <view                ratio="0.5"
-               relative="org.eclipse.ui.views.TaskList"
-               relationship="right"
-               id="org.softwareFm.debugPanel.views.DebugSrcAndJarView">
          </view>
       </perspectiveExtension>
       <perspectiveExtension
@@ -65,6 +52,9 @@
                id="org.softwareFm.debugPanel.views.DebugEventView">
          </view>
       </perspectiveExtension>
+   </extension>
+   <extension          point="org.softwareFm.bundle">
+    <bundle name ="DebugPanel" class="org.softwareFm.debugPlugin.DebugPanelConstants"/>
    </extension>
 
 </plugin>
