--- a/org.softwareFm.display/.classpath
+++ b/org.softwareFm.display/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
+	<classpathentry kind="src" path="src/main/resource"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
