--- a/org.softwareFm.display/src/main/resource/org/softwarefm/display/SoftwareFmDisplay.properties
+++ b/org.softwareFm.display/src/main/resource/org/softwarefm/display/SoftwareFmDisplay.properties
@@ -1,9 +1,16 @@
-jar.jarName.title = JarName
-project.name.title = Project
+jar.jarName.title = Jar Name
+project.name.title = Project Name
 project.url.title = Project Url
 project.issues.title = Issues
-project.mailingList.title = Issues
-project.twitter.title = Issues
+project.mailingList.title = Mailing lists
+project.twitter.title = Twitter
 organisation.name.title = Organisation
 organisation.url.title = Organisation Url
-organisation.twitter.title = Issues
+organisation.twitter.title = Twitter
+
+smallButton.jar.details.title = Jar Details
+smallButton.project.details.title = Project Details
+smallButton.project.bugs.title = Dealing with Bugs
+smallButton.project.twitter.title = Twitter
+smallButton.organisation.details.title = Organisation Details
+smallButton.organisation.twitter.title = Twitter
