--- a/org.softwareFm.display/build.properties
+++ b/org.softwareFm.display/build.properties
@@ -1,6 +1,7 @@
 source.. = src/main/java/,\
            src/test/java/,\
-           src/main/resource/
+           src/main/resource/,\
+           src/test/resources/
 output.. = bin/
 bin.includes = META-INF/,\
                .
