--- a/org.softwareFm.display/build.properties
+++ b/org.softwareFm.display/build.properties
@@ -1,7 +1,6 @@
 source.. = src/main/java/,\
            src/test/java/,\
-           src/main/resource/,\
-           src/test/resources/
+           src/main/resource/
 output.. = bin/
 bin.includes = META-INF/,\
                .
