--- a/org.softwareFm.display/src/main/resource/org/softwarefm/display/SoftwareFmDisplay.properties
+++ b/org.softwareFm.display/src/main/resource/org/softwarefm/display/SoftwareFmDisplay.properties
@@ -14,3 +14,7 @@ smallButton.project.bugs.title = Dealing with Bugs
 smallButton.project.twitter.title = Twitter
 smallButton.organisation.details.title = Organisation Details
 smallButton.organisation.twitter.title = Twitter
+
+
+action.edit.tooltip = Edit
+action.browse.tooltip = Browse
