--- a/org.softwareFm.display/src/main/resource/org/softwarefm/display/SoftwareFmDisplay.properties
+++ b/org.softwareFm.display/src/main/resource/org/softwarefm/display/SoftwareFmDisplay.properties
@@ -18,3 +18,6 @@ smallButton.organisation.twitter.title = Twitter
 
 action.edit.tooltip = Edit
 action.browse.tooltip = Browse
+
+button.ok.title = OK
+button.cancel.title = Cancel
