--- a/org.softwareFm.display/src/main/resource/org/softwarefm/display/SoftwareFmDisplay.properties
+++ b/org.softwareFm.display/src/main/resource/org/softwarefm/display/SoftwareFmDisplay.properties
@@ -18,6 +18,7 @@ smallButton.organisation.twitter.title = Twitter
 
 action.edit.tooltip = Edit
 action.browse.tooltip = Browse
+action.add.tooltip = Add
 
 button.ok.title = OK
 button.cancel.title = Cancel
