--- a/org.softwareFm.eclipse/.classpath
+++ b/org.softwareFm.eclipse/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/main/resource"/>
+	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
