JarSimpleButton now updates

--- a/org.softwareFm.display/bin/org/softwarefm/display/SoftwareFmDisplay.properties
+++ b/org.softwareFm.display/bin/org/softwarefm/display/SoftwareFmDisplay.properties
@@ -1,4 +1,7 @@
 jar.jarName.title = Jar Name
+jar.javadoc.title = Javadoc
+jar.source.title = Source
+
 project.name.title = Project Name
 project.url.title = Project Url
 project.issues.title = Issues
