--- a/org.softwareFm.eclipse/plugin.xml
+++ b/org.softwareFm.eclipse/plugin.xml
@@ -3,7 +3,7 @@
 <plugin>
    <extension-point id="org.softwareFm.image" name="Image" schema="schema/org.softwareFm.eclipse.exsd"/>
    <extension-point id="org.softwareFm.bundle" name="Bundle" schema="schema/org.softwareFm.eclipse.exsd"/>
-   <extension-point id="org.softwareFm.dataStoreConfigurator" name="dataStoreConfigurator" schema="schema/org.softwareFm.eclipse.exsd"/>
+   <extension-point id="org.softwareFm.dataStore" name="dataStoreConfigurator" schema="schema/org.softwareFm.eclipse.exsd"/>
    <extension-point id="org.softwareFm.smallButton" name="smallButton" schema="schema/org.softwareFm.eclipse.exsd"/>
    <extension-point id="org.softwareFm.action" name="action" schema="schema/org.softwareFm.eclipse.exsd"/>
    <extension-point id="org.softwareFm.displayer" name="displayer" schema="schema/org.softwareFm.eclipse.exsd"/>
@@ -19,8 +19,20 @@
       <item name ="SoftwareFmDisplay" class="org.softwareFm.eclipse.Activator"/>
 </extension>
 
-<extension  point="org.softwareFm.dataStoreConfigurator">
-      <item class="org.softwareFm.eclipse.SoftwareFmDataStoreConfigurator"/>
+<extension  point="org.softwareFm.dataStore">
+      <item class="org.softwareFm.eclipse.configurators.DataStoreConfigurator"/>
+</extension>
+
+<extension  point="org.softwareFm.smallButton">
+      <item class="org.softwareFm.eclipse.configurators.SmallButtonConfigurator"/>
+</extension>
+
+<extension  point="org.softwareFm.listEditor">
+      <item class="org.softwareFm.eclipse.configurators.ListEditorConfigurator"/>
+</extension>
+
+<extension  point="org.softwareFm.displayer">
+      <item class="org.softwareFm.eclipse.configurators.DisplayerStoreConfigurator"/>
 </extension>
 
 
