--- a/org.softwareFm.configuration/build.properties
+++ b/org.softwareFm.configuration/build.properties
@@ -1,5 +1,6 @@
 source.. = src/main/java/,\
            src/test/java/,\
+           src/main/resource/,\
            src/test/resources/
 output.. = bin/
 bin.includes = META-INF/,\
