--- a/org.softwareFm.eclipse/build.properties
+++ b/org.softwareFm.eclipse/build.properties
@@ -1,7 +1,6 @@
 source.. = src/main/java/,\
-           src/test/java/,\
-           src/main/resource/,\
-           src/test/resources/
+           src/test/java/
 output.. = bin/
-bin.includes = META-INF/,\
+bin.includes = plugin.xml,\
+               META-INF/,\
                .
