--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -6,10 +6,11 @@ project.name.title = Project Name
 project.url.title = Project Url
 project.issues.title = Issues
 project.mailingList.title = Mailing lists
-project.twitter.title = Twitter
+project.twitter.add = Add Keyword
+
 organisation.name.title = Organisation
 organisation.url.title = Organisation Url
-organisation.twitter.title = Twitter
+organisation.twitter.add = Add Keyword
 
 smallButton.jar.details.title = Jar Details
 smallButton.project.details.title = Project Details
