--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -1,10 +1,12 @@
 jar.jarName.title = Jar Name
+jar.jarPath.tooltip = Jar Path
 jar.javadoc.title = Javadoc
 jar.source.title = Source
 
 project.name.title = Project Name
 project.url.title = Project Url
 project.issues.title = Issues
+project.issues.tooltip = Issues
 project.mailingList.title = Mailing lists
 project.twitter.add = Add Keyword
 
