--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -30,3 +30,6 @@ button.ok.title = OK
 button.cancel.title = Cancel
 
 tweet.line.title = Tweet
+nameAndValue.line.title = Name and Value
+nameAndUrl.line.title = Name and Url
+nameAndEmail.line.title = Name and Email
