Added the large button backdrops

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -23,6 +23,7 @@ smallButton.organisation.twitter.title = Twitter
 
 
 action.edit.tooltip = Edit
+action.edit.url.tooltip = Edit Url
 action.browse.tooltip = Browse
 action.add.tooltip = Add
 
