--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -21,6 +21,8 @@ smallButton.project.twitter.title = Twitter
 smallButton.organisation.details.title = Organisation Details
 smallButton.organisation.twitter.title = Twitter
 
+project.name.missing.title = Please add the project's Url then Name
+organisation.name.missing.title = Please add the organisation's Url then Name 
 
 action.edit.tooltip = Edit
 action.edit.url.tooltip = Edit Url
