Project and Organisation button have small icons. Guard conditions, and text messages when things are missing

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -1,3 +1,5 @@
+blank.title = 
+
 jar.jarName.title = Jar Name
 jar.jarPath.tooltip = Jar Path
 jar.javadoc.title = Javadoc
@@ -17,12 +19,16 @@ organisation.twitter.add = Add Keyword
 smallButton.jar.details.title = Jar Details
 smallButton.project.details.title = Project Details
 smallButton.project.bugs.title = Dealing with Bugs
+smallButton.project.mailingLists.title = Mailing Lists
 smallButton.project.twitter.title = Twitter
 smallButton.organisation.details.title = Organisation Details
 smallButton.organisation.twitter.title = Twitter
 
-project.name.missing.title = Please add the project's Url then Name
-organisation.name.missing.title = Please add the organisation's Url then Name 
+raw.jawPath.missing.title = Jar not selected
+project.url.missing.title = Please add the project's Url 
+project.name.missing.title = Please add the project's Name
+organisation.url.missing.title = Please add the organisation's Url  
+organisation.name.missing.title = Please add the organisation's Name 
 
 action.edit.tooltip = Edit
 action.edit.url.tooltip = Edit Url
