--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -1,6 +1,7 @@
 blank.title = 
 
 jar.jarName.title = Jar Name
+jar.jarPath.title = Jar Path
 jar.jarPath.tooltip = Jar Path
 jar.javadoc.title = Javadoc
 jar.source.title = Source
@@ -24,7 +25,8 @@ smallButton.project.twitter.title = Twitter
 smallButton.organisation.details.title = Organisation Details
 smallButton.organisation.twitter.title = Twitter
 
-raw.jawPath.missing.title = Jar not selected
+
+hexDigest.missing.title = Item selected was not defined in a jar file
 project.url.missing.title = Please add the project's Url 
 project.name.missing.title = Please add the project's Name
 organisation.url.missing.title = Please add the organisation's Url  
