Added Javadoc/Source dialog, and some PersonUnit test cases

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -39,8 +39,15 @@ action.add.tooltip = Add
 
 button.ok.title = OK
 button.cancel.title = Cancel
+button.copyToSoftwareFm.title = Copy To SoftwareFm
+button.copyToEclipse.title = Copy To Eclipse
 
 tweet.line.title = Tweet
 nameAndValue.line.title = Name and Value
 nameAndUrl.line.title = Name and Url
 nameAndEmail.line.title = Name and Email
+
+
+dialog.eclipseValue.title=Eclipse Value
+dialog.softwareFmValue.title=SoftwareFm Value
+
