--- a/org.softwareFm.eclipse/plugin.xml
+++ b/org.softwareFm.eclipse/plugin.xml
@@ -33,6 +33,7 @@
 
 <extension  point="org.softwareFm.eclipse.action">
       <item class="org.softwareFm.configuration.configurators.ActionStoreConfigurator"/>
+      <item class="org.softwareFm.configuration.configurators.JavadocAndSourceActionStoreConfigurator"/>
 </extension>
 
 <extension  point="org.softwareFm.eclipse.displayer">
