--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -41,6 +41,12 @@ button.ok.title = OK
 button.cancel.title = Cancel
 button.copyToSoftwareFm.title = Copy To SoftwareFm
 button.copyToEclipse.title = Copy To Eclipse
+button.eclipseNotUrl.title = Eclipse has none http value
+button.noData.title = No data in Eclipse or SoftwareFm
+button.matches.title = Eclipse and SoftwareFm match
+button.doesntMatches.title = Eclipse and SoftwareFm differ
+button.javadocSource.tooltip = Eclipse: {0}\nSoftwareFm: {1}
+
 
 tweet.line.title = Tweet
 nameAndValue.line.title = Name and Value
