--- a/org.softwareFm.eclipse/plugin.xml
+++ b/org.softwareFm.eclipse/plugin.xml
@@ -48,9 +48,9 @@
 </extension>
 
 <extension  point="org.softwareFm.eclipse.largeButton">
-      <item class="org.softwareFm.configuration.configurators.JarLargeButtonFactory"/>
-      <item class="org.softwareFm.configuration.configurators.ProjectLargeButtonFactory"/>
-      <item class="org.softwareFm.configuration.configurators.OrganisationLargeButtonFactory"/>
+      <item class="org.softwareFm.configuration.largebuttons.JarLargeButtonFactory"/>
+      <item class="org.softwareFm.configuration.largebuttons.ProjectLargeButtonFactory"/>
+      <item class="org.softwareFm.configuration.largebuttons.OrganisationLargeButtonFactory"/>
 </extension>
 
  <extension  point="org.eclipse.ui.views">
