--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -6,12 +6,17 @@ jar.jarPath.tooltip = Jar Path
 jar.javadoc.title = Javadoc
 jar.source.title = Source
 
+project.blogs.title = Blogs
 project.name.title = Project Name
 project.url.title = Project Url
 project.issues.title = Issues
 project.issues.tooltip = Issues
+project.tutorials.title = Tutorials
+project.tutorials.tooltip = Tutorials
 project.mailingList.title = Mailing lists
 project.twitter.add = Add Keyword
+project.facebook.add = Add
+project.rss.add = Add
 
 organisation.name.title = Organisation
 organisation.url.title = Organisation Url
@@ -19,11 +24,15 @@ organisation.twitter.add = Add Keyword
 
 smallButton.jar.details.title = Jar Details
 smallButton.project.details.title = Project Details
-smallButton.project.bugs.title = Dealing with Bugs
+smallButton.project.blogs.title = Blogs
+smallButton.project.issues.title = Issues
 smallButton.project.mailingLists.title = Mailing Lists
+smallButton.project.tutorials.title = Tutorials
 smallButton.project.twitter.title = Twitter
-smallButton.organisation.details.title = Organisation Details
 smallButton.organisation.twitter.title = Twitter
+
+smallButton.project.facebook.title = Facebook
+smallButton.organisation.details.title = Organisation Details
 
 
 hexDigest.missing.title = Item selected was not defined in a jar file
