Browing actions cleanded up. Javadoc Dialog now OK for first draft

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -45,9 +45,12 @@ action.edit.tooltip = Edit
 action.edit.url.tooltip = Edit Url
 action.browse.tooltip = Browse
 action.add.tooltip = Add
+action.search.tooltip = Search
+action.javadoc.view.tooltip = View and/or Edit Javadoc Details
 
 button.ok.title = OK
 button.cancel.title = Cancel
+button.verify.title = Verify
 button.copyToSoftwareFm.title = Copy To SoftwareFm
 button.copyToEclipse.title = Copy To Eclipse
 button.eclipseNotUrl.title = Eclipse has none http value
@@ -65,4 +68,4 @@ nameAndEmail.line.title = Name and Email
 
 dialog.eclipseValue.title=Eclipse Value
 dialog.softwareFmValue.title=SoftwareFm Value
-
+dialog.experiment.title = Experiment
