--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/ant.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdom.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.17-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="lib/cake-forkjoin-0.1.jar" sourcepath="C:/Users/Phil/.m2/repository/org/codehaus/cake/forkjoin/cake-forkjoin/0.1/cake-forkjoin-0.1-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://www.jarvana.com/jarvana/view/org/codehaus/cake/forkjoin/cake-forkjoin/0.1/cake-forkjoin-0.1-javadoc.jar!"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="lib/cake-forkjoin-0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-api-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-math-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.1.jar" sourcepath="C:/Users/Phil/.m2/repository/org/apache/httpcomponents/httpclient/4.1.1/httpclient-4.1.1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.jar" sourcepath="C:/Users/Phil/.m2/repository/org/apache/httpcomponents/httpcore/4.1/httpcore-4.1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-asm-3.0.5.RELEASE.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/spring-core-3.0.5.RELEASE.jar" sourcepath="C:/Users/Phil/.m2/repository/org/springframework/spring-core/3.0.5.RELEASE/spring-core-3.0.5.RELEASE-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-core-3.0.5.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/twitter4j-core-2.2.4.jar"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.17-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
