--- a/Externals/build.properties
+++ b/Externals/build.properties
@@ -12,4 +12,7 @@ bin.includes = META-INF/,\
                lib/log4j-1.2.16.jar,\
                lib/spring-asm-3.0.5.RELEASE.jar,\
                lib/spring-core-3.0.5.RELEASE.jar,\
-               lib/twitter4j-core-2.2.4.jar
+               lib/twitter4j-core-2.2.4.jar,\
+               lib/ant.jar,\
+               lib/jdom.jar,\
+               lib/mysql-connector-java-5.1.17-bin.jar
