More icons + cleaned up the text around rss/tutorials/blogs

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -61,6 +61,10 @@ button.javadocSource.tooltip = Eclipse: {0}\nSoftwareFm: {1}
 
 
 tweet.line.title = Tweet
+facebook.line.title = Facebook
+rss.line.title = Rss
+tutorials.line.title = Tutorial
+blogs.line.title = Blog
 nameAndValue.line.title = Name and Value
 nameAndUrl.line.title = Name and Url
 nameAndEmail.line.title = Name and Email
