--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -15,10 +15,11 @@ project.tutorials.title = Tutorials
 project.tutorials.tooltip = Tutorials
 project.mailingList.title = Mailing lists
 project.twitter.add = Add Keyword
-project.facebook.add = Add
-project.rss.add = Add
+project.facebook.add = Add Facebook Page
+project.rss.add = Add Rss Feed
 
 organisation.name.title = Organisation
+organisation.rss.add = Add Rss Feed
 organisation.url.title = Organisation Url
 organisation.twitter.add = Add Keyword
 
@@ -42,6 +43,7 @@ organisation.url.missing.title = Please add the organisation's Url
 organisation.name.missing.title = Please add the organisation's Name 
 
 action.edit.tooltip = Edit
+action.edit.name.tooltip = Edit Name
 action.edit.url.tooltip = Edit Url
 action.browse.tooltip = Browse
 action.add.tooltip = Add
