--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -13,7 +13,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.1.jar" sourcepath="C:/Users/Phil/.m2/repository/org/apache/httpcomponents/httpclient/4.1.1/httpclient-4.1.1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.jar" sourcepath="C:/Users/Phil/.m2/repository/org/apache/httpcomponents/httpcore/4.1/httpcore-4.1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.16.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.16.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://logging.apache.org/log4j/1.2/apidocs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/spring-asm-3.0.5.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-core-3.0.5.RELEASE.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/twitter4j-core-2.2.4.jar"/>
