Shall changes after Alpha review with Andy and Madjid

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -15,7 +15,7 @@ project.tutorials.title = Tutorials
 project.tutorials.tooltip = Tutorials
 project.mailingList.title = Mailing lists
 project.twitter.add = Add Keyword
-project.facebook.add = Add Facebook Page
+project.facebook.add = Add Facebook
 project.rss.add = Add Rss Feed
 
 organisation.name.title = Organisation
