--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -35,6 +35,7 @@ smallButton.organisation.twitter.title = Twitter
 smallButton.project.facebook.title = Facebook
 smallButton.organisation.details.title = Organisation Details
 
+rss.title = {0}
 
 hexDigest.missing.title = Item selected was not defined in a jar file
 project.url.missing.title = Please add the project's Url 
