--- a/org.softwareFm.configuration/build.properties
+++ b/org.softwareFm.configuration/build.properties
@@ -1,6 +1,7 @@
 source.. = src/main/java/,\
            src/main/resource/,\
-           src/test/resources/
+           src/test/resources/,\
+           src/test/java/
 output.. = bin/
 bin.includes = META-INF/,\
                .
