Import process now sets up parallel group/artifact/version

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -3,6 +3,7 @@ blank.title =
 jar.jarName.title = Jar Name
 jar.jarPath.title = Jar Path
 jar.jarPath.tooltip = Jar Path
+jar.hexDigest.title = Jar Digest
 #jar.javadoc.title = Javadoc
 #jar.source.title = Source
 
