--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -14,7 +14,7 @@ artifact.javadoc.title = Javadoc
 artifact.source.title = Source
 
 artifact.blogs.title = Blogs
-artifact.artifactId.title =  artifact Id
+artifact.artifactId.title =  Artifact Id
 artifact.url.title = Url
 artifact.issues.title = Issues
 artifact.issues.tooltip = Issues
