Moving to new jar/version/artifact/group layout

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -28,6 +28,7 @@ artifact.rss.add = Add Rss Feed
 
 group.groupId.title = GroupId
 group.name.title = Name
+group.version.title = Version
 
 group.twitter.add = Add Keyword
 group.facebook.add = Add Facebook
@@ -60,6 +61,7 @@ action.browse.tooltip = Browse
 action.add.tooltip = Add
 action.search.tooltip = Search
 action.javadoc.view.tooltip = View and/or Edit Javadoc Details
+action.source.view.tooltip = View and/or Edit Source Details
 
 button.ok.title = OK
 button.cancel.title = Cancel
