--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -6,7 +6,7 @@ jar.jarPath.tooltip = Jar Path
 jar.hexDigest.title = Jar Digest
 #jar.javadoc.title = Javadoc
 #jar.source.title = Source
-
+id.sfm.pattern = {0}/{1} v{2}
 artifact.artifactId.title = ArtifactId
 artifact.name.title = Name
 artifact.description.title = Description
