SoftwareFm ID Editing and compression of layout

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -1,20 +1,23 @@
 blank.title = 
 
+id.sfm.pattern = {0}/{1} v{2}
 jar.jarName.title = Jar Name
 jar.jarPath.title = Jar Path
 jar.jarPath.tooltip = Jar Path
 jar.hexDigest.title = Jar Digest
 #jar.javadoc.title = Javadoc
 #jar.source.title = Source
-id.sfm.pattern = {0}/{1} v{2}
-artifact.artifactId.title = ArtifactId
+
+jar.groupId.title = GroupId
+jar.artifactId.title =  Artifact Id
+jar.version.title =  Version
+
 artifact.name.title = Name
 artifact.description.title = Description
 artifact.javadoc.title = Javadoc
 artifact.source.title = Source
 
 artifact.blogs.title = Blogs
-artifact.artifactId.title =  Artifact Id
 artifact.url.title = Url
 artifact.issues.title = Issues
 artifact.issues.tooltip = Issues
@@ -26,7 +29,6 @@ artifact.twitter.add = Add Keyword
 artifact.facebook.add = Add Facebook
 artifact.rss.add = Add Rss Feed
 
-group.groupId.title = GroupId
 group.name.title = Name
 group.version.title = Version
 
@@ -53,7 +55,7 @@ artifact.name.missing.title = Please specify the artifact's name
 jar.groupId.missing.title = Please specify the group id
 jar.artifactId.missing.title = Please specify the artifactId
 jar.version.missing.title = Please specify the version
-
+artifact.url.missing.title = Please specify the main url for this project
 group.name.missing.title = Please specify the group name
 
 action.edit.tooltip = Edit
