Tidying up first page

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -51,10 +51,8 @@ smallButton.organisation.details.title = Organisation Details
 rss.title = {0}
 
 hexDigest.missing.title = Item selected was not defined in a jar file
+jar.softwareFmId.missing.title = Please specify the Software Fm Id
 artifact.name.missing.title = Please specify the artifact's name
-jar.groupId.missing.title = Please specify the group id
-jar.artifactId.missing.title = Please specify the artifactId
-jar.version.missing.title = Please specify the version
 artifact.url.missing.title = Please specify the main url for this project
 group.name.missing.title = Please specify the group name
 
