--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -1,7 +1,6 @@
 blank.title = 
 
-id.sfm.pattern = {0}/{1} v{2}
-jar.jarName.title = Jar Name
+jar.jarName.title = Filename
 jar.jarPath.title = Jar Path
 jar.jarPath.tooltip = Jar Path
 jar.hexDigest.title = Jar Digest
@@ -11,14 +10,17 @@ jar.hexDigest.title = Jar Digest
 jar.groupId.title = GroupId
 jar.artifactId.title =  Artifact Id
 jar.version.title =  Version
+jar.softwareFmId.title = Id
 
-artifact.name.title = Name
-artifact.description.title = Description
+id.sfm.pattern = {0}/{1} v{2}
+
+artifact.name.title = Project
+artifact.url.title = Url
+artifact.description.title = Description:
 artifact.javadoc.title = Javadoc
 artifact.source.title = Source
 
 artifact.blogs.title = Blogs
-artifact.url.title = Url
 artifact.issues.title = Issues
 artifact.issues.tooltip = Issues
 artifact.tutorials.title = Tutorials
