First stab at recruitment

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -1,5 +1,7 @@
 blank.title = 
 
+artifact.job.title = Job
+
 jar.jarName.title = Filename
 jar.jarPath.title = Jar Path
 jar.jarPath.tooltip = Jar Path
@@ -87,6 +89,7 @@ blogs.line.title = Blog
 nameAndValue.line.title = Name and Value
 nameAndUrl.line.title = Name and Url
 nameAndEmail.line.title = Name and Email
+job.line.title = Job
 
 
 dialog.eclipseValue.title=Eclipse Value
