Layout of SFM ID / Text Editor

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -18,7 +18,7 @@ id.sfm.pattern = {0}/{1} v{2}
 
 artifact.name.title = Project
 artifact.url.title = Url
-artifact.description.title = Description:
+artifact.description.title = Description
 artifact.javadoc.title = Javadoc
 artifact.source.title = Source
 
