--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -76,8 +76,8 @@ button.copyToSoftwareFm.title = Copy To SoftwareFm
 button.copyToEclipse.title = Copy To Eclipse
 button.eclipseNotUrl.title = Eclipse has none http value
 button.noData.title = No data in Eclipse or SoftwareFm
-button.matches.title = Eclipse and SoftwareFm match
-button.doesntMatches.title = Eclipse and SoftwareFm differ
+button.matches.title = Eclipse & SoftwareFm match
+button.doesntMatches.title = Eclipse & SoftwareFm have data
 button.javadocSource.tooltip = Eclipse: {0}\nSoftwareFm: {1}
 
 
