--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -76,8 +76,8 @@ button.copyToSoftwareFm.title = Copy To SoftwareFm
 button.copyToEclipse.title = Copy To Eclipse
 button.eclipseNotUrl.title = Eclipse has none http value
 button.noData.title = No data in Eclipse or SoftwareFm
-button.matches.title = Eclipse & SoftwareFm match
-button.doesntMatches.title = Eclipse & SoftwareFm have data
+button.matches.title = Eclipse / SoftwareFm match
+button.doesntMatches.title = Eclipse / SoftwareFm have data
 button.javadocSource.tooltip = Eclipse: {0}\nSoftwareFm: {1}
 
 
@@ -95,6 +95,9 @@ job.line.title = Job
 dialog.eclipseValue.title=Eclipse Value
 dialog.softwareFmValue.title=SoftwareFm Value
 dialog.experiment.title = Experiment
+
+javadoc.title = Javadoc
+source.title = Source
 
 description.noneJarFile.text = This was defined in a file that isn't a jar. Software FM manages data about released jars, so it cannot help you with this file
 description.idsNotDefined.text = No one has yet added data about this jar to Software FM. To do so you need to define three things: the Group Id, the Artifact Id and the Version. \
