New gui now displayers everything except lists. Many small defects still

--- a/org.softwareFm.display/bin/org/softwareFm/display/Test.properties
+++ b/org.softwareFm.display/bin/org/softwareFm/display/Test.properties
@@ -1,3 +1,14 @@
+title.title = Title
+dialog.eclipseValue.title = Eclipse Value
+dialog.softwareFmValue.title = Software FM Value
+dialog.experiment.title = Experiment
+
+jar.groupId.title = Group ID
+jar.artifactId.title = Artifact ID
+jar.version.title = Version
+
+javadoc.title = Javadoc
+
 artifact.jarName.title = Jar Name
 artifact.javadoc.title = Javadoc
 artifact.source.title = Source
