Editors are now shown when you click on text, icons with optional default action appear

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -2,6 +2,7 @@ blank.title =
 
 artifact.job.title = Job
 
+jar.jarPath.title = Full filename
 jar.jarName.title = Filename
 jar.jarPath.title = Jar Path
 jar.jarPath.tooltip = Jar Path
