--- a/org.softwareFm.display/bin/org/softwareFm/display/Test.properties
+++ b/org.softwareFm.display/bin/org/softwareFm/display/Test.properties
@@ -9,7 +9,8 @@ jar.version.title = Version
 
 javadoc.title = Javadoc
 
-artifact.jarName.title = Jar Name
+jar.jarPath.title = Full jar path
+jar.jarName.title = Full jar path
 artifact.javadoc.title = Javadoc
 artifact.source.title = Source
 
