Initial help in place

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -104,3 +104,19 @@ description.noneJarFile.text = This was defined in a file that isn't a jar. Soft
 description.idsNotDefined.text = No one has yet added data about this jar to Software FM. To do so you need to define three things: the Group Id, the Artifact Id and the Version. \
 Software Fm applies the same meaning that Maven does to these word.
 
+
+softwareFm.id.help = This is the three part ID that SoftwareFM uses to identify the jar. The Group Id is an id representing the organisation / person / group that built the software. \
+The Artifact Id is an id representing "this" jar. The Version indicates which version of that jar it is. \nExample: For "spring-core-3.0.5.RELEASE.jar", the Group Id would be org.springframework, \
+the Artifact Id spring-core and the Version 3.0.5.RELEASE
+
+softwareFm.name.help = This is the human readable name of the jar that you clicked on. It will often be the same as the artifact id with spaces added
+
+artifact.url.help = This is main url for the artifact. Often it is the url of the project that created it
+artifact.description.help = This is a description of the artifact
+
+jar.help = This is the name of the jar that the thing you clicked on was defined in
+
+issues.help = This is the url of the issues database for this artifact
+
+source.help = This is data about where eclipse, and where softwareFm think a jar containing the source code can be found 
+javadoc.help = This is data about where eclipse, and where softwareFm think a jar containing the javadoc, or a url pointing to the javadoc can be found 
