--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -101,12 +101,13 @@ javadoc.title = Javadoc
 source.title = Source
 
 description.noneJarFile.text = This was defined in a file that isn't a jar. Software FM manages data about released jars, so it cannot help you with this file
-description.idsNotDefined.text = No one has yet added data about this jar to Software FM. To do so you need to define three things: the Group Id, the Artifact Id and the Version. \
+description.idsNotDefined.text = Software FM needs your help\n\nNo one has yet added data about this jar to Software FM. To do so you need to define three things: the Group Id, the Artifact Id and the Version. \
 Software Fm applies the same meaning that Maven does to these word.
 
 
-softwareFm.id.help = This is the three part ID that SoftwareFM uses to identify the jar. The Group Id is an id representing the organisation / person / group that built the software. \
-The Artifact Id is an id representing "this" jar. The Version indicates which version of that jar it is. \nExample: For "spring-core-3.0.5.RELEASE.jar", the Group Id would be org.springframework, \
+softwareFm.id.help = This is the three part ID that SoftwareFM uses to identify the jar.\n* The Group Id is an id representing the organisation / person / group that built the software. \
+\n* The Artifact Id is an id representing "this" jar.\
+\n* The Version indicates which version of that jar it is. \nExample: For "spring-core-3.0.5.RELEASE.jar", the Group Id would be org.springframework, \
 the Artifact Id spring-core and the Version 3.0.5.RELEASE
 
 softwareFm.name.help = This is the human readable name of the jar that you clicked on. It will often be the same as the artifact id with spaces added
